--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,6 +34,10 @@
                                             <i class="fa fa-eye-slash" id="toggleIcon"></i>
                                         </span>
                                     </div>
+                                    <div class="form-check mb-3">
+                                        <input class="form-check-input" type="checkbox" id="rememberMe" name="remember-me" />
+                                        <label class="form-check-label" for="rememberMe">Lưu thông tin đăng nhập</label>
+                                    </div>
                                     <div>
                                         <a th:href="@{auth/forgot-password}" class="text-primary" style="text-decoration: none;">Quên mật khẩu?</a>
                                     </div>
