--- a/src/main/resources/templates/client/fragments/signin-modal.html
+++ b/src/main/resources/templates/client/fragments/signin-modal.html
@@ -32,9 +32,9 @@
                                 <form class="tab-pane fade show active" id="signin"
                                      role="tabpanel" aria-labelledby="signin-tab">
                                     <div class="form-group">
-                                        <label for="login_username">Tên đăng nhập *</label> <input
-                                            type="text" class="form-control" id="login_username"
-                                            name="login_username" required>
+                                        <label for="login_email">Email *</label> <input
+                                            type="text" class="form-control" id="login_email"
+                                            name="login_email" required>
                                     </div>
                                     <!-- End .form-group -->
 
@@ -58,9 +58,9 @@
                                 <form class="tab-pane fade" id="register" role="tabpanel"
                                      aria-labelledby="register-tab">
                                     <div class="form-group">
-                                        <label for="register_username">Tên đăng nhập *</label> <input
-                                            type="text" class="form-control" id="register_username"
-                                            name="register_username" required>
+                                        <label for="register_name">Tên người dùng *</label> <input
+                                            type="text" class="form-control" id="register_name"
+                                            name="register_name" required>
                                     </div>
                                     <!-- End .form-group -->
 
@@ -72,11 +72,23 @@
                                     <!-- End .form-group -->
 
                                     <div class="form-group">
+                                        <label for="register_phone">SĐT *</label> <input
+                                            type="text" class="form-control" id="register_phone"
+                                            name="register_phone" required>
+                                    </div>
+
+                                    <div class="form-group">
                                         <label for="register_password">Mật khẩu *</label> <input
                                             type="password" class="form-control" id="register_password"
                                             name="register_password" required>
                                     </div>
                                     <!-- End .form-group -->
+
+                                    <div class="form-group">
+                                        <label for="register_retype_password">Nhập lại mật khẩu *</label> <input
+                                            type="password" class="form-control" id="register_retype_password"
+                                            name="register_retype_password" required>
+                                    </div>
 
                                     <div class="form-footer">
                                         <button type="submit" class="btn btn-outline-primary-2" id="register_submit">
