--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -11,28 +11,28 @@
 
 			<ul class="sidebar-nav" id="sidebar-nav">
 
-				<li class="nav-item"><a class="nav-link" th:href="@{/home}"> <i
+				<li class="nav-item"><a class="nav-link" th:href="@{/admin/home}"> <i
 						class="bi bi-grid"></i> <span>Trang chủ</span>
 				</a></li>
 				<!-- End Dashboard Nav -->
 
-				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/users}">
+				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/users}">
 						<i class="bi bi-people-fill"></i> <span>Người dùng</span>
 				</a></li>
 
-				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/categories}">
+				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/home}">
 						<i class="bi bi-tag-fill"></i> <span>Danh mục</span>
 				</a></li>
 
-				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/brands}">
+				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/home}">
 						<i class="bi bi-yelp"></i> <span>Thương hiệu</span>
 				</a></li>
 
-				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/products}">
+				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/home}">
 						<i class="bi bi-box"></i> <span>Sản phẩm</span>
 				</a></li>
 
-				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/orders}">
+				<li class="nav-item"><a class="nav-link collapsed" th:href="@{/admin/home}">
 						<i class="bi bi-paypal"></i> <span>Hoá đơn</span>
 				</a></li>
 
