--- a/src/main/resources/templates/admin/fragments/header.html
+++ b/src/main/resources/templates/admin/fragments/header.html
@@ -50,7 +50,7 @@
                         </li>
 
                         <li><a class="dropdown-item d-flex align-items-center"
-                               th:href="@{/car/auth/logout}"> <i class="bi bi-box-arrow-right"></i>
+                               th:href="@{/admin/logout}"> <i class="bi bi-box-arrow-right"></i>
                             <span>Đăng xuất</span>
                         </a></li>
 
