--- a/src/main/resources/templates/admin/home/index.html
+++ b/src/main/resources/templates/admin/home/index.html
@@ -226,7 +226,26 @@
 
 			</div>
 		</section>
+		<div class="modal fade" id="viewUser" tabindex="-1">
+			<div class="modal-dialog modal-dialog-centered modal-xl">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title">Thông tin người dùng</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="modal"
+								aria-label="Close"></button>
+					</div>
+					<div class="modal-body" id="bodyViewUser">
+
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary"
+								data-bs-dismiss="modal">Đóng</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
+
 </body>
 
 </html>
