--- a/src/main/resources/templates/client/layout.html
+++ b/src/main/resources/templates/client/layout.html
@@ -106,6 +106,8 @@
 <!-- Main JS File -->
 <script th:src="@{/client/assets/js/main.js}"></script>
 <script th:src="@{/client/assets/js/demos/demo-14.js}"></script>
+<script th:src="@{/client/assets/js/carOwner.js}"></script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script th:src="@{/client/assets/api-all.js}"></script>
