--- a/src/main/resources/templates/client/carOwner/mycar.html
+++ b/src/main/resources/templates/client/carOwner/mycar.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{client/layout.html}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +18,7 @@
     </style>
 </head>
 <body>
-<div class="container mt-5">
+<div layout:fragment="content" class="container mt-5">
     <div class="row mb-5">
         <div class="col-md-12 d-flex justify-content-between">
             <h1>List of Cars</h1>
@@ -87,16 +89,4 @@
 
 </body>
 
-<script th:src="@{/shop/assets/js/jquery.min.js}"></script>
-<script th:src="@{/shop/assets/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{/shop/assets/js/jquery.hoverIntent.min.js}"></script>
-<script th:src="@{/shop/assets/js/jquery.waypoints.min.js}"></script>
-<script th:src="@{/shop/assets/js/superfish.min.js}"></script>
-<script th:src="@{/shop/assets/js/owl.carousel.min.js}"></script>
-<script th:src="@{/shop/assets/js/bootstrap-input-spinner.js}"></script>
-<script th:src="@{/shop/assets/js/jquery.magnific-popup.min.js}"></script>
-<script th:src="@{/shop/assets/js/jquery.plugin.min.js}"></script>
-<script th:src="@{/shop/assets/js/jquery.countdown.min.js}"></script>
-<script th:src="@{/shop/assets/js/nouislider.min.js}"></script>
-<script th:src="@{/shop/assets/js/jquery.elevateZoom.min.js}"></script>
 </html>
