--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -63,7 +63,7 @@
 											<div class="header-search-wrapper search-wrapper-wide">
 												<!-- End .select-custom -->
 												<label for="q" class="sr-only">Tìm kiếm</label> <input type="search" class="form-control"
-													name="keywords" id="keywords" th:value="${keywords}" placeholder="Tìm theo tên sản phẩm ...">
+													name="keywords" id="keywords" th:value="${keywords}" placeholder="Tìm theo tên xe ...">
 
 												<button class="btn btn-primary" type="submit">
 													<i class="icon-search"></i>
@@ -108,13 +108,13 @@
 						<div class="col-auto col-lg-3 col-xl-3 col-xxl-2 header-left">
 							<div class="dropdown category-dropdown is-on" data-visible="false">
 								<a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
-									aria-expanded="true" data-display="static" title="Danh mục sản phẩm">Danh mục sản phẩm </a>
+									aria-expanded="true" data-display="static" title="Danh mục sản phẩm">Danh mục thương hiệu xe</a>
 
 								<div class="dropdown-menu">
 									<nav class="side-nav">
 										<ul class="menu-vertical sf-arrows" id="menu__item__data">
 											<!-- Danh sách danh mục -->
-											<li><a href="#">Danh mục sản phẩm</a></li>
+											<li><a href="#">Danh mục thương hiệu xe</a></li>
 										</ul>
 										<!-- End .menu-vertical -->
 									</nav>
