--- a/src/main/resources/templates/auth/admin/reset-password.html
+++ b/src/main/resources/templates/auth/admin/reset-password.html
@@ -86,6 +86,7 @@
                                                                         class="form-control" id="againPassword"
                                                                         placeholder="Nhập lại mật khẩu">
                                     </div>
+                                    <input type="text" name="email" hidden>
                                     <div class="col-12">
                                         <button class="btn btn-primary w-100" type="submit">Thay
                                             đổi
