--- a/src/main/resources/templates/auth/error/admin/403.html
+++ b/src/main/resources/templates/auth/error/admin/403.html
@@ -50,7 +50,7 @@
 				class="section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center">
 				<h1>403</h1>
 				<h2>Bạn không có quyền truy cập</h2>
-				<a class="btn" th:href="@{/auth/login}">Về trang đăng nhập</a> <img
+				<a class="btn" th:href="@{/auth/admin/login}">Về trang đăng nhập</a> <img
 					th:src="@{/admin/assets/img/not-found.svg}" class="img-fluid py-5"
 					alt="Page Not Found">
 				<div class="credits">
