--- a/src/main/resources/templates/auth/error/admin/404.html
+++ b/src/main/resources/templates/auth/error/admin/404.html
@@ -49,8 +49,8 @@
 			<section
 				class="section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center">
 				<h1>404</h1>
-				<h2>Trang không tồn tại</h2>
-				<a class="btn" th:href="@{/auth/login}">Về trang đăng nhập</a> <img
+				<h2 th:text="${message}"></h2>
+				<a class="btn" th:href="@{/car/home}">Về trang chủ</a> <img
 					th:src="@{/admin/assets/img/not-found.svg}" class="img-fluid py-5"
 					alt="Page Not Found">
 				<div class="credits">
