--- a/src/main/resources/templates/client/home/index.html
+++ b/src/main/resources/templates/client/home/index.html
@@ -21,12 +21,12 @@
 							alt="Banner img desc">
 						</a>
 						<div class="banner-content text-right">
-							<div class="price text-center">
-								<sup class="text-white">Chỉ từ</sup> <span class="text-white">
-									<strong>99</strong><sup class="text-white">.000 VND</sup>
+							<div class="price text-center" style="color: #fcb941">
+								<sup class="text-white">Chỉ từ</sup> <span class="text-yellow">
+									<strong>9</strong><sup class="text-white">.000.000 VND</sup>
 								</span>
 							</div>
-							<a th:href="@{/car/client}" class="banner-link">Cửa hàng <i
+							<a th:href="@{/car/client}" class="banner-link" style="color: white">Cửa hàng <i
 								class="icon-long-arrow-right"></i></a>
 						</div>
 						<!-- End .banner-content -->
@@ -46,8 +46,6 @@
 							<div class="intro-slide">
 								<figure class="slide-image">
 									<picture>
-									<source media="(max-width: 480px)"
-										th:srcset="@{/client/assets/images/demos/demo-14/slider/slide-1-480w.jpg}">
 									<img
 										th:src="@{/client/assets/images/demos/demo-14/slider/slide-1.jpg}"
 										alt="Image Desc"> </picture>
@@ -55,10 +53,10 @@
 								<!-- End .slide-image -->
 
 								<div class="intro-content">
-									<h3 class="intro-subtitle">Sản phẩm mới</h3>
+									<h3 class="intro-subtitle text-white">Sản phẩm mới</h3>
 									<!-- End .h3 intro-subtitle -->
 									<h1 class="intro-title text-white">
-										Bộ sưu tập <br>Đồ nội thất
+										Bộ sưu tập <br>Posché
 									</h1>
 									<!-- End .intro-title -->
 
@@ -85,13 +83,13 @@
 								<!-- End .slide-image -->
 
 								<div class="intro-content">
-									<h3 class="intro-subtitle">Siêu giảm giá</h3>
+									<h3 class="intro-subtitle text-white">Siêu giảm giá</h3>
 									<!-- End .h3 intro-subtitle -->
-									<h1 class="intro-title">DJI Mavic 2 Pro</h1>
+									<h1 class="intro-title">Lamborgini</h1>
 									<!-- End .intro-title -->
 
 									<div class="intro-price">
-										<sup>Chỉ từ</sup> <span> 99<sup>.000 VND</sup>
+										<sup>Chỉ từ</sup> <span> 9<sup>.000.000 VND</sup>
 										</span>
 									</div>
 									<!-- End .intro-price -->
@@ -116,10 +114,10 @@
 								<!-- End .slide-image -->
 
 								<div class="intro-content">
-									<h3 class="intro-subtitle">Số lượng giới hạn</h3>
+									<h3 class="intro-subtitle text-white">Số lượng giới hạn</h3>
 									<!-- End .h3 intro-subtitle -->
-									<h1 class="intro-title">
-										Chỉ dành cho bạn <br>Wardrobe
+									<h1 class="intro-title text-white">
+										Chỉ dành cho bạn <br>LP700
 									</h1>
 									<!-- End .intro-title -->
 
@@ -150,12 +148,12 @@
 							alt="Banner img desc">
 						</a>
 						<div class="banner-content text-right">
-							<div class="price text-center">
+							<div class="price text-center" style="color: #fcb941">
 								<sup class="text-white">Chỉ từ</sup> <span class="text-white">
-									<strong>99</strong><sup class="text-white">.000 VND</sup>
+									<strong>9</strong><sup class="text-white">.000.000 VND</sup>
 								</span>
 							</div>
-							<a th:href="@{/car/client}" class="banner-link">Cửa hàng <i
+							<a th:href="@{/car/client}" style="color: white" class="banner-link">Cửa hàng <i
 								class="icon-long-arrow-right"></i></a>
 						</div>
 						<!-- End .banner-content -->
@@ -203,7 +201,7 @@
 								<div class="col-md-6">
 									<div class="banner banner-overlay">
 										<a href="#"> <img
-											th:src="@{/client/assets/images/demos/demo-14/banners/banner-3.png}"
+											th:src="@{/client/assets/images/demos/demo-14/banners/banner-3.jpg}"
 											alt="Banner img desc">
 										</a>
 
