--- a/src/main/resources/templates/admin/fragments/header.html
+++ b/src/main/resources/templates/admin/fragments/header.html
@@ -41,6 +41,7 @@
                                role="button"
                                data-bs-toggle="modal" data-bs-target="#viewAdmin"
                                th:data-id="${currentUser.id}"
+                               th:onclick="viewAdmin(this.getAttribute('data-id'))"
                             > <i class="bi bi-person"></i> <span>Thông
 										tin cá nhân</span>
                             </a></li>
@@ -61,30 +62,31 @@
         <!-- End Icons Navigation -->
 
     </header>
-</div>
-<div class="modal fade" id="viewAdmin" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Thông tin người dùng</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-            </div>
-            <div class="modal-body" id="bodyViewAdmin">
-                <div class="row">
-                    <div class="col-sm-12 col-lg-12">
+    <div class="modal fade" id="viewAdmin" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Thông tin người dùng</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="bodyViewAdmin" >
 
-                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="updateButton" data-bs-dismiss="modal">
+                        Cập nhật
+                    </button>
+                    <button type="button" class="btn btn-secondary"
+                            data-bs-dismiss="modal">Đóng
+                    </button>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary"
-                        data-bs-dismiss="modal">Đóng
-                </button>
-            </div>
+
         </div>
     </div>
 </div>
+
 </body>
 
 </html>
