--- a/src/main/resources/templates/client/carOwner/createcar.html
+++ b/src/main/resources/templates/client/carOwner/createcar.html
@@ -37,73 +37,82 @@
           enctype="multipart/form-data" th:object="${carCreateDto}">
         <!-- Step 1: Basic Information -->
         <div class="step active">
-            <h2>Step 1: Basic Information</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="licensePlate">Name:</label>
-                        <input type="text" class="form-control" th:id="nameOfCar"
-                               th:field="*{name}" required>
-                    </div>
+        <h2>Step 1: Basic Information</h2>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="licensePlate">Name:</label>
+                    <input type="text" class="form-control" th:id="nameOfCar"
+                           th:field="*{name}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
+                </div>
 
-                    <div class="form-group">
-                        <label for="licensePlate">License Plate:</label>
-                        <input type="text" class="form-control" id="licensePlate" name="licensePlate"
-                               th:field="*{licensePlate}" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="color">Color:</label>
-                        <input type="text" class="form-control" id="color" name="color"
-                               th:field="*{color}" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="brand">Brand:</label>
-                        <input type="text" class="form-control" id="brand" name="brand"
-                               th:field="*{brand}" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="model">Model:</label>
-                        <input type="text" class="form-control" id="model" name="model"
-                               th:field="*{model}" required>
-                    </div>
+                <div class="form-group">
+                    <label for="licensePlate">License Plate:</label>
+                    <input type="text" class="form-control" id="licensePlate" name="licensePlate"
+                           th:field="*{licensePlate}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('licensePlate')}" th:errors="*{licensePlate}"></div>
                 </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="productionYear">Production Year:</label>
-                        <input type="number" class="form-control" id="productionYear" name="productionYear"
-                               th:field="*{productionYear}" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="numberOfSeats">Number of Seats:</label>
-                        <input type="number" class="form-control" id="numberOfSeats" name="numberOfSeats"
-                               th:field="*{numberOfSeats}" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="transmission">Transmission:</label>
-                        <input type="text" class="form-control" id="transmission" name="transmission"
-                               th:field="*{transmissionType}" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="fuel">Fuel:</label>
-                        <input type="text" class="form-control" id="fuel" name="fuel"
-                               th:field="*{fuelType}" required>
-                    </div>
+                <div class="form-group">
+                    <label for="color">Color:</label>
+                    <input type="text" class="form-control" id="color" name="color"
+                           th:field="*{color}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('color')}" th:errors="*{color}"></div>
+                </div>
+                <div class="form-group">
+                    <label for="brand">Brand:</label>
+                    <input type="text" class="form-control" id="brand" name="brand"
+                           th:field="*{brand}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></div>
+                </div>
+                <div class="form-group">
+                    <label for="model">Model:</label>
+                    <input type="text" class="form-control" id="model" name="model"
+                           th:field="*{model}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></div>
                 </div>
             </div>
-            <div class="form-group">
-                <label for="registrationPaper">Registration Paper:</label>
-                <input type="file" class="form-control" id="registrationPaper"
-                       name="registrationPaper" required >
-            </div>
-            <div class="form-group">
-                <label>Certificate of Inspection:</label>
-                <input type="file" class="form-control" name="certificates" required>
-            </div>
-            <div class="form-group">
-                <label>Insurance:</label>
-                <input type="file" class="form-control" name="insurance" required>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="productionYear">Production Year:</label>
+                    <input type="number" class="form-control" id="productionYear" name="productionYear"
+                           th:field="*{productionYear}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('productionYear')}" th:errors="*{productionYear}"></div>
+                </div>
+                <div class="form-group">
+                    <label for="numberOfSeats">Number of Seats:</label>
+                    <input type="number" class="form-control" id="numberOfSeats" name="numberOfSeats"
+                           th:field="*{numberOfSeats}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('numberOfSeats')}" th:errors="*{numberOfSeats}"></div>
+                </div>
+                <div class="form-group">
+                    <label for="transmission">Transmission:</label>
+                    <input type="text" class="form-control" id="transmission" name="transmission"
+                           th:field="*{transmissionType}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('transmissionType')}" th:errors="*{transmissionType}"></div>
+                </div>
+                <div class="form-group">
+                    <label for="fuel">Fuel:</label>
+                    <input type="text" class="form-control" id="fuel" name="fuel"
+                           th:field="*{fuelType}">
+                    <div class="text-danger" th:if="${#fields.hasErrors('fuelType')}" th:errors="*{fuelType}"></div>
+                </div>
             </div>
         </div>
+        <div class="form-group">
+            <label for="registrationPaper">Registration Paper:</label>
+            <input type="file" class="form-control" id="registrationPaper"
+                   name="registrationPaper" >
+        </div>
+        <div class="form-group">
+            <label>Certificate of Inspection:</label>
+            <input type="file" class="form-control" name="certificates">
+        </div>
+        <div class="form-group">
+            <label>Insurance:</label>
+            <input type="file" class="form-control" name="insurance">
+        </div>
+    </div>
         <!-- Step 2: Details -->
         <div class="step">
             <h2>Step 2: Details</h2>
@@ -112,22 +121,26 @@
                     <div class="form-group">
                         <label for="mileage">Mileage:</label>
                         <input type="number" class="form-control" id="mileage" name="mileage"
-                               th:field="*{mileage}" required>
+                               th:field="*{mileage}">
+                        <div class="text-danger" th:if="${#fields.hasErrors('mileage')}" th:errors="*{mileage}"></div>
                     </div>
                     <div class="form-group">
                         <label for="fuelConsumption">Fuel Consumption:</label>
                         <input type="number" class="form-control" id="fuelConsumption" name="fuelConsumption"
-                               th:field="*{fuelConsumption}" required>
+                               th:field="*{fuelConsumption}">
+                        <div class="text-danger" th:if="${#fields.hasErrors('fuelConsumption')}" th:errors="*{fuelConsumption}"></div>
                     </div>
                     <div class="form-group">
                         <label for="address">Address:</label>
                         <input type="text" class="form-control" id="address" name="address"
-                               th:field="*{address}" required>
+                               th:field="*{address}">
+                        <div class="text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
                     </div>
                     <div class="form-group">
                         <label for="description">Description:</label>
                         <textarea class="form-control" id="description" name="description"
-                                  th:field="*{description}" required></textarea>
+                                  th:field="*{description}"></textarea>
+                        <div class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -175,12 +188,14 @@
             <div class="form-group">
                 <label for="basePrice">Base Price:</label>
                 <input type="number" class="form-control" id="basePrice" name="basePrice"
-                       th:field="*{basePrice}" required>
+                       th:field="*{basePrice}">
+                <div class="text-danger" th:if="${#fields.hasErrors('basePrice')}" th:errors="*{basePrice}"></div>
             </div>
             <div class="form-group">
                 <label for="deposit">Required Deposit:</label>
                 <input type="number" class="form-control" id="deposit" name="deposit"
-                       th:field="*{deposit}" required>
+                       th:field="*{deposit}">
+                <div class="text-danger" th:if="${#fields.hasErrors('deposit')}" th:errors="*{deposit}"></div>
             </div>
             <div class="form-group">
                 <label>Term of Use:</label>
