--- a/src/main/resources/templates/client/contact/contact.html
+++ b/src/main/resources/templates/client/contact/contact.html
@@ -80,7 +80,7 @@
 						<h2 class="title mb-1">Bất kỳ câu hỏi?</h2>
 						<!-- End .title mb-2 -->
 						<p class="mb-2">Sử dụng mẫu dưới đây để liên lạc với đội ngũ
-							bán hàng</p>
+							quản lý</p>
 
 						<form action="#" class="contact-form mb-3">
 							<div class="row">
