--- a/src/main/resources/templates/client/carOwner/details.html
+++ b/src/main/resources/templates/client/carOwner/details.html
@@ -93,51 +93,60 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="licensePlate">Name:</label>
-                                    <input type="text" class="form-control"
-                                           th:field="*{name}" required>
+                                    <input type="text" class="form-control" th:id="nameOfCar"
+                                           th:field="*{name}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                                 </div>
 
                                 <div class="form-group">
                                     <label for="licensePlate">License Plate:</label>
                                     <input type="text" class="form-control" id="licensePlate" name="licensePlate"
-                                           th:field="*{licensePlate}" required>
+                                           th:field="*{licensePlate}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('licensePlate')}" th:errors="*{licensePlate}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="color">Color:</label>
                                     <input type="text" class="form-control" id="color" name="color"
-                                           th:field="*{color}" required>
+                                           th:field="*{color}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('color')}" th:errors="*{color}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="brand">Brand:</label>
                                     <input type="text" class="form-control" id="brand" name="brand"
-                                           th:field="*{brand}" required>
+                                           th:field="*{brand}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="model">Model:</label>
                                     <input type="text" class="form-control" id="model" name="model"
-                                           th:field="*{model}" required>
+                                           th:field="*{model}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label for="productionYear">Production Year:</label>
                                     <input type="number" class="form-control" id="productionYear" name="productionYear"
-                                           th:field="*{productionYear}" required>
+                                           th:field="*{productionYear}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('productionYear')}" th:errors="*{productionYear}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="numberOfSeats">Number of Seats:</label>
                                     <input type="number" class="form-control" id="numberOfSeats" name="numberOfSeats"
-                                           th:field="*{numberOfSeats}" required>
+                                           th:field="*{numberOfSeats}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('numberOfSeats')}" th:errors="*{numberOfSeats}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="transmission">Transmission:</label>
                                     <input type="text" class="form-control" id="transmission" name="transmission"
-                                           th:field="*{transmissionType}" required>
+                                           th:field="*{transmissionType}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('transmissionType')}" th:errors="*{transmissionType}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="fuel">Fuel:</label>
                                     <input type="text" class="form-control" id="fuel" name="fuel"
-                                           th:field="*{fuelType}" required>
+                                           th:field="*{fuelType}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('fuelType')}" th:errors="*{fuelType}"></div>
                                 </div>
                             </div>
                         </div>
@@ -189,22 +198,26 @@
                                 <div class="form-group">
                                     <label for="mileage">Mileage:</label>
                                     <input type="number" class="form-control" id="mileage" name="mileage"
-                                           th:field="*{mileage}" required>
+                                           th:field="*{mileage}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('mileage')}" th:errors="*{mileage}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="fuelConsumption">Fuel Consumption:</label>
                                     <input type="number" class="form-control" id="fuelConsumption" name="fuelConsumption"
-                                           th:field="*{fuelConsumption}" required>
+                                           th:field="*{fuelConsumption}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('fuelConsumption')}" th:errors="*{fuelConsumption}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="address">Address:</label>
                                     <input type="text" class="form-control" id="address" name="address"
-                                           th:field="*{address}" required>
+                                           th:field="*{address}">
+                                    <div class="text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></div>
                                 </div>
                                 <div class="form-group">
                                     <label for="description">Description:</label>
                                     <textarea class="form-control" id="description" name="description"
-                                              th:field="*{description}" required></textarea>
+                                              th:field="*{description}"></textarea>
+                                    <div class="text-danger" th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -214,15 +227,13 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Additional Functions:</label>
-                                    <span id="additionalF" class="hidden opacity-0" th:text="${carDto.getAdditionalFunctions()}"></span>
+                                    <span th:id="additionalF" style="display: none" th:text="${carDto.getAdditionalFunctions()}"></span>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox"
-                                               th:field="*{additionalFunctions}" id="bluetooth" name="additionalFunctions" value="Bluetooth">
+                                        <input class="form-check-input" type="checkbox" th:field="*{additionalFunctions}" id="bluetooth" name="additionalFunctions" value="Bluetooth">
                                         <label class="form-check-label" for="bluetooth">Bluetooth</label>
                                     </div>
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox"
-                                               th:field="*{additionalFunctions}" id="camera" name="additionalFunctions" value="Camera">
+                                        <input class="form-check-input" type="checkbox" th:field="*{additionalFunctions}" id="camera" name="additionalFunctions" value="Camera">
                                         <label class="form-check-label" for="camera">Camera</label>
                                     </div>
                                     <div class="form-check">
@@ -254,11 +265,13 @@
                             <label for="basePrice">Base Price:</label>
                             <input type="number" class="form-control" id="basePrice" name="basePrice"
                                    th:field="*{basePrice}" required>
+                            <div class="text-danger" th:if="${#fields.hasErrors('basePrice')}" th:errors="*{basePrice}"></div>
                         </div>
                         <div class="form-group">
                             <label for="deposit">Required Deposit:</label>
                             <input type="number" class="form-control" id="deposit" name="deposit"
                                    th:field="*{deposit}" required>
+                            <div class="text-danger" th:if="${#fields.hasErrors('deposit')}" th:errors="*{deposit}"></div>
                         </div>
                         <div class="form-group">
                             <label>Term of Use:</label>
