--- a/src/main/resources/templates/client/layout.html
+++ b/src/main/resources/templates/client/layout.html
@@ -107,6 +107,7 @@
 <script th:src="@{/client/assets/js/main.js}"></script>
 <script th:src="@{/client/assets/js/demos/demo-14.js}"></script>
 <script th:src="@{/client/assets/js/carOwner.js}"></script>
+<script th:src="@{/client/assets/js/carDetails.js}"></script>
 
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
